# HandshakeAuto

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  deploy.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  SettingsPage.tsx
src/engine/: ai.ts  handshake.ts  simulator.ts
src/store/: settingsStore.ts  taskStore.ts
src/types/: index.ts
