[package]
name = "handshake-auto"
version = "1.0.0"
description = "AI task automation dashboard for Handshake AI Fellowship"
authors = ["s4lmon778"]
edition = "2021"

[lib]
name = "handshake_auto_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
